Revert "omg alignment fixed!"
This reverts commit a40e4a05fa5b8161ed3fa5c4415e30ef8122adcf.

--- a/style.css
+++ b/style.css
@@ -82,9 +82,10 @@ div.front {
 
 .front img {
   margin: auto;
-  width: 15em;
+  margin-top: 0em;
   padding-left: 3em;
   padding-right: 3em;
+  width: 15em;
   
 }
 
@@ -219,7 +220,6 @@ table {
   width: 70%;
   margin: auto;
   border-spacing: 0 5em ;
-  table-layout: fixed;
 }
 
 th{
